src/hotspot/share/cds/metaspaceShared.cpp
@@ -1347,8 +1347,8 @@ MapArchiveResult MetaspaceShared::map_archives(FileMapInfo* static_mapinfo, File
     log_info(cds)("initial optimized module handling: %s", CDSConfig::is_using_optimized_module_handling() ? "enabled" : "disabled");
     log_info(cds)("initial full module graph: %s", CDSConfig::is_using_full_module_graph() ? "enabled" : "disabled");
   } else {
-    unmap_archive(static_mapinfo);
-    unmap_archive(dynamic_mapinfo);
+    unmap_archive(static_mapinfo, archive_space_rs);
+    unmap_archive(dynamic_mapinfo, archive_space_rs);
     release_reserved_spaces(total_space_rs, archive_space_rs, class_space_rs);
   }
 
@@ -1591,12 +1591,12 @@ MapArchiveResult MetaspaceShared::map_archive(FileMapInfo* mapinfo, char* mapped
     mapinfo->map_regions(archive_regions, archive_regions_count, mapped_base_address, rs);
 
   if (result != MAP_ARCHIVE_SUCCESS) {
-    unmap_archive(mapinfo);
+    unmap_archive(mapinfo, rs);
     return result;
   }
 
   if (!mapinfo->validate_shared_path_table()) {
-    unmap_archive(mapinfo);
+    unmap_archive(mapinfo, rs);
     return MAP_ARCHIVE_OTHER_FAILURE;
   }
 
@@ -1609,7 +1609,7 @@ MapArchiveResult MetaspaceShared::map_archive(FileMapInfo* mapinfo, char* mapped
   }
 
   if (!mapinfo->validate_aot_class_linking()) {
-    unmap_archive(mapinfo);
+    unmap_archive(mapinfo, rs);
     return MAP_ARCHIVE_OTHER_FAILURE;
   }
 
@@ -1617,10 +1617,10 @@ MapArchiveResult MetaspaceShared::map_archive(FileMapInfo* mapinfo, char* mapped
   return MAP_ARCHIVE_SUCCESS;
 }
 
-void MetaspaceShared::unmap_archive(FileMapInfo* mapinfo) {
+void MetaspaceShared::unmap_archive(FileMapInfo* mapinfo, ReservedSpace archive_space_rs) {
   assert(CDSConfig::is_using_archive(), "must be runtime");
   if (mapinfo != nullptr) {
-    mapinfo->unmap_regions(archive_regions, archive_regions_count);
+    mapinfo->unmap_regions(archive_regions, archive_regions_count, archive_space_rs);
     mapinfo->unmap_region(MetaspaceShared::bm);
     mapinfo->set_is_mapped(false);
   }
